<resources>
    <string name="app_name">Start Form</string>
    <string name="first_fragment_label"> Registro de Usuario </string>
    <string name="second_fragment_label"> Creación de Cuenta </string>
    <string name="title_first_page">Cuentanos sobre ti</string>
    <string name="title_personal_information">Información Personal</string>
    <string name="field_name_label">Nombre</string>
    <string name="field_last_name_label">Apellido Paterno</string>
    <string name="field_mother_last_name_label">Apellido Materno</string>
    <string name="birth_date_label">Fecha de Nacimiento</string>
    <string name="day_label">Día</string>
    <string name="title_birth_date">¿Cuando Naciste?</string>
    <string name="month_label">Mes</string>
    <string name="year_label">Año</string>
    <string name="gender_label">Genero</string>
    <string name="male_label">Masculino</string>
    <string name="female_label">Femenino</string>
    <string name="no_binary_label">No binario</string>
    <string name="continue_label">Continuar</string>
    <string name="title_second_form">¡Hola %1$s, vamos a crear tu cuenta!</string>
    <string name="title_login">Informacion de Inicio de Sesion</string>
    <string name="username_label">Nombre de Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="email_label">Correo Electronico</string>

    <string name="day_error">Día Inválido</string>
    <string name="month_error">Mes Inválido</string>
    <string name="year_error">Año Inválido</string>
    <string name="mail_error">Correo Inválido</string>
    <string name="username_error">Nombre de usuario sin espacios</string>

    <string name="password_description1">Recuerda que debe tener:</string>
    <string name="password_description2">- Letras minusculas</string>
    <string name="password_description3">- Letras MAYUSCULAS</string>
    <string name="password_description4">- Caracteres Especiales (# $ % @ _ /)</string>
    <string name="password_description5">- Digitos</string>
    <string name="privacy_label">Acepto el Aviso de Privacidad</string>
    <string name="terms_label">Acepto los Terminos y Condiciones</string>
    <string name="create_account_button_label">Crear Mi Cuenta</string>
    <string name="return_label">Regresar</string>
    <string name="to_login_label"> Ir a Inicio de Sesión</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_description_1_5">- Al menos 8 caracteres</string>
    <string name="account_instructions_label">Ya puedes iniciar sesion con tu usuario y contraseña</string>
    <string name="account_created_label">¡Felicidades, tu cuenta se ha creado con exito!</string>
</resources>