<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountCreation"
    >


    <TextView
        android:id="@+id/title_second_form"
        style="@style/Widget.StartForm.TextView"
        android:layout_width="300dp"
        android:layout_height="114dp"
        android:text="@string/title_second_form"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textFontWeight="800"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title_login_information"
        style="@style/Widget.StartForm.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="19sp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="35dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@id/title_second_form"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:hint="@string/email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_login_information">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_email_edit"
            android:layout_width="280dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_username"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:hint="@string/username_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_username_edit"
            android:layout_width="280dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:hint="@string/password_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_password_edit"
            android:layout_width="280dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>





</androidx.constraintlayout.widget.ConstraintLayout>