<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_first_form"
        android:layout_width="200dp"
        android:layout_height="114dp"
        android:text="@string/title_first_page"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textAppearance="?attr/title"
        android:textStyle="italic"
        android:layout_marginTop="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_personal_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_personal_information"
        android:textSize="19sp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_marginTop="32dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toBottomOf="@+id/title_first_form"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_name"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:hint="@string/field_name_label"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_personal_information" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_name_edit"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>







</androidx.constraintlayout.widget.ConstraintLayout>